# rust-search-extension

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README-ZH.md  README.md  build.mk  carbon.css  content-script-bundle.js  depoly-crates-index  github-quick-navigation.json  index.css  index.html  juice.css  manifest.jsonnet  package-lock.json  package.json  robots.txt  rust-blog-urls.json  sitemap.xml  svelte.config.js  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build-binary.yml  build-index.yml  chromium.yml  codeql-analysis.yml  crates-index.yml  docs.yml  firefox.yml  main.yml  nightly-release.yml
advisory/: abi_stable.json  abomonation.json  abox.json  acc_reader.json  actix-http.json  actix-service.json  actix-utils.json  actix-web.json  actix_codec.json  actix_http.json  actix_service.json  actix_utils.json  actix_web.json  adler.json  adtensor.json  aes-ctr.json  aes_ctr.json  aes_soft.json  aesni.json  age.json  alg_ds.json  algorithmica.json  aliyun-oss-client.json  aliyun_oss_client.json  alloc-cortex-m.json  alloc_cortex_m.json  alloy_dyn_abi.json  alloy_json_abi.json  alpm-rs.json  alpm_rs.json  ammonia.json  anon_vec.json  ansi_term.json  anstream.json  anymap.json  aovec.json  appendix.json  arc-swap.json  arc_swap.json  arenavec.json  (+740 more)
api/: README.md  package.json  statistics.ts
changelog/: index.html
crates/: index.js  version.json
docs/: README.md  config.toml
docs/content/: _index.md  changelog.md  faq.md  how-it-works.md  privacy.md  release-history.md  testimonial.md  update.md
docs/sass/: _markdown.scss  _text.scss  _ultility.scss  _variables.scss  carbon.scss  index.scss  markdown.scss  text.scss
docs/templates/: _macros.html  _variables.html  index.html  page.html  update.html
extension/: app.js  background.js  book-search.js  command.js  compat.js  constants.js  content-script-bundle.js  crate-manager.js  crate-search.js  crates-index.js  deminifier.js  firefox-bg.html  generic.css  index-manager.js  index-setter.js  lib.js  main.js  manifest.json  migration.js  omnibox.js  popup.css  popup.html  popup.js  rust-attributes.js  rust-version.js  search-index.js  search.js  service-worker-keepalive.js  service-worker.js  settings.js  statistics.js
extension/command/: base.js  blog.js  book.js  help.js  history.js  label.js  manager.js  release.js  rfc.js  rustc.js  stable.js  stats.js  target.js  tool.js  update.js  yet.js
extension/index/: attributes.js  books.js  caniuse.js  commands.js  crates.js  labels.js  lints.js  rfcs.js  rustc.js  std-docs.js  targets.js
extension/libs/: bar-chart.js  barChart.js  calendar-heatmap.css  calendar-heatmap.js  charts.css  charts.js  semver.js
extension/manage/: crates.html  crates.js  index.css  index.html  settings.html
extension/popup/: index.css  index.html  index.js  toast.js
extension/redirect/: redirect.html  redirect.js
extension/script/: add-nightly-search-index.js  add-rustc-search-index.js  add-search-index.js  add-std-search-index.js  crate-docs.js  details-toggle.css  doc-rust-lang-org.css  doc-rust-lang-org.js  docs-rs-check-crate.js  docs-rs.css  docs-rs.js  github.css  lib.js  macro-railroad-wasm.js  macro-railroad.js  (+8 more)
faq/: index.html
index/: books.js  caniuse.js  commands.js  labels.js  lints.js  rfcs.js  rustc.js  targets.js
js/: update-index.js
macro-railroad/: Cargo.toml  README.md  build.rs
macro-railroad/src/: lib.rs
manage/: Cargo.toml  README.md
manage/src/: main.rs
manage/templates/: base.html  crates.html  export.html  index.html  redirect.html  settings.html
manage/templates/css/: balloon.min.css  generic.css  index.css  text.css
manage/templates/js/: bar-chart.js  crates.js  export.js  import.js  index.js  redirect.js  settings.js
manage/templates/sass/: _crates.scss  _export.scss  _home.scss  _settings.scss  index.scss
privacy/: index.html
rust/: Cargo.toml
rust/src/: frequency.rs  lib.rs  main.rs  minify.rs
rust/src/tasks/: advisory.rs  books.json  books.rs  caniuse.rs  crates.rs  labels.rs  lints-index.rs  lints.rs  mod.rs  rfcs.rs  rust-blog-url.rs  rust_blog_url.rs  rustc.rs  targets.rs
scripts/: cargo-subcommands.js  deploy-crates-index.sh  deploy-docs.sh  rust-attributes.js  trigger-action.sh
templates/: base.html  build.sh  crates.html  export.html  index.html  redirect.html  settings.html
testimonial/: index.html
tests/: bootstrap.html  crate-doc.spec.js  deminifier.spec.js  omnibox.spec.js  script-lib.spec.js  storage.js
update/: index.html
(+342 files in other folders)
