[package]
name = "macro_railroad_ext"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>", "lyshuhow@gmail.com"]
build = "build.rs"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
railroad = "0.1"
macro_railroad = "0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying. However, we don't actually care all that much about 
# code-size.
console_error_panic_hook = "0.1"


[build-dependencies]
built = { version = "0.5", features = ["chrono"], default_features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
