[package]
name = "build_manage"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
tera = { version = "1.12", default-features = false }
