[package]
name = "rust-search-extension"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifier = "0.0.41"
unicode-segmentation = "1.6.0"
futures = "0.3.1"
tokio = { version = "0.2", features = ["macros", "time"] }
reqwest = { version = "0.10", features = ["json"] }
select = "0.4.3"
csv = "1.1.3"
semver = { version = "0.9.0", features = ["ci"] }
tar = "0.4.36"
libflate = "0.1.27"
rayon = "1.3.0"
regex = "1.3.9"
argh = "0.1.4"
