[package]
name = "rust-search-extension"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifier = "0.3"
unicode-segmentation = "1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
select = "0.6"
semver = { version = "1", features = ["serde"] }
rayon = "1"
regex = "1"
argh = "0.1"
rustsec = "0"
html-escape = "0"
db-dump = "0.7.1"
